--- a/Style/style.css
+++ b/Style/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-family: sans-serif;
+    text-decoration: none;
   }
 .h_primary{
   font-size: 2.5rem;
