--- a/Style/tablet.css
+++ b/Style/tablet.css
@@ -1,3 +1,11 @@
 section{
     padding: 25px 50px;
 }
+.h_primary{
+    font-size: 2.1rem;
+}
+
+/***** Contact Page *****/
+.contact_section h2{
+    margin-bottom: 10px;
+  }
