added search bar to all law pages

--- a/Style/style.css
+++ b/Style/style.css
@@ -60,7 +60,7 @@
     height: 30px;
     padding: 6px;
     border: none;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     margin-right: 16px;
     font-size: 17px;
   }
